<?xml version="1.0" encoding="utf-8"?>
<!--Fragment to add a house-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal">

    <!--Text entry for setting the name of the house-->
    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/add_house_name_prompt"/>

    <!--Text entry for setting the desciption of the house-->
    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/add_house_description_prompt"/>

    <!--Text entry that only allows signed decimal numbers for setting the latitude of the house-->
    <EditText
        android:id="@+id/latitude_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/add_house_latitude_prompt"
        android:inputType="numberDecimal|numberSigned"/>

    <!--Text entry that only allows signed decimal numbers for setting the longitude of the house-->
    <EditText
        android:id="@+id/longitude_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/add_house_longitude_prompt"
        android:inputType="numberDecimal|numberSigned"/>

    <!--Button to add the House to the database-->
    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/add_house_button"
        android:backgroundTint="@color/orange"
        android:text="@string/add_house_button_text"/>


</LinearLayout>